kubernetes/frontend_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-web
  labels:
    app: myapp-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp-web
  template:
    metadata:
      labels:
        app: myapp-web
    spec:
      containers:
        - name: myapp-web
          image: myapp-web:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: myapp-web
spec:
  selector:
    app: myapp-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
